[tool.poetry]
name = "oncall"
version = "0.1.0"
description = ""
authors = ["Damian Myerscough <Damian.Myerscough@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
celery = "^5.3.1"
redis = "^5.0.0"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
requests = "^2.31.0"
flask-celeryext = "^0.5.0"
flower = "^2.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
